--- a/12-countdown-timer/setup/index.html
+++ b/12-countdown-timer/setup/index.html
@@ -9,7 +9,55 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>countdown timer project</h1>
+    <section class="section-center">
+      <!-- image -->
+      <article class="gift-img">
+        <img src="./gift.jpeg" alt="">
+      </article>
+      <!-- info -->
+
+      <article class="gift-info">
+        <h3>old iphone giveaway</h3>
+        <h4 class="giveaway">
+          giveaway end on sunday, 27 june 2021, 10:00pm
+        </h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id rerum, sed eius aperiam excepturi unde ullam! Temporibus provident quidem dolores vel, quaerat magnam iusto aliquid expedita doloribus eos, asperiores corrupti?</p>
+        <div class="deadline">
+          <!-- days  -->
+          <div class="deadline-format">
+            <div>
+              <h4 class="days">34</h4>
+              <span>days</span>
+            </div>
+          </div>
+          <!-- end of iteam -->
+          <!-- hours  -->
+          <div class="deadline-format">
+            <div>
+              <h4 class="hours">34</h4>
+              <span>hours</span>
+            </div>
+          </div>
+          <!-- end of iteam -->
+          <!-- mins  -->
+          <div class="deadline-format">
+            <div>
+              <h4 class="mins">34</h4>
+              <span>mins</span>
+            </div>
+          </div>
+          <!-- end of iteam -->
+          <!-- secs  -->
+          <div class="deadline-format">
+            <div>
+              <h4 class="secs">34</h4>
+              <span>secs</span>
+            </div>
+          </div>
+          <!-- end of iteam -->
+        </div>
+      </article>
+    </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
